fixtures/valid/map-basic.crumb
BEGIN CRUMB
v=1.1
kind=map
title=Repo overview
source=cli
---
[project]
name=crumb-format

[modules]
- cli/
- mcp/
- api/
END CRUMB
