fixtures/invalid/missing-end.crumb
BEGIN CRUMB
v=1.1
kind=task
title=No end marker
source=cli
---
[goal]
Missing END CRUMB line.

[context]
- Parser MUST reject.

[constraints]
- Parser MUST reject.
